# seo_friendly_urls_django

./: README.md  pyproject.toml
seo_friendly_urls_django/: manage.py
seo_friendly_urls_django/seo_friendly_urls_django/: settings.py  urls.py  wsgi.py
seo_friendly_urls_django/web/: models.py  views.py
seo_friendly_urls_django/web/migrations/: 0001_initial.py
seo_friendly_urls_django/web/templates/web/: jobposting_detail.html
